Fix alignment in CTA and Welcome containers

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
-    font-family: Roboto, serif;
+    font-family: Roboto, sans-serif;
     margin: 0;
     box-sizing: border-box;
 }
@@ -67,7 +67,7 @@ ul a {
     font-size: 18px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     gap: 15px;
 }
 
@@ -111,8 +111,7 @@ h1 {
     height: 250px;
     background-color: #c8c9c7;
     border-radius: 15px;
-    margin-top: 10px;
-    /* flex-shrink: 0; */
+    margin-top: 8px;
     
 }
 
@@ -186,7 +185,8 @@ padding: 40px;
     padding: 30px;
     background-color: #3882F6;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
     border-radius: 20px;
     gap: 20px;
 }
@@ -194,7 +194,7 @@ padding: 40px;
 .cta-box h3 {
     color: #F9FAF8;
     font-size: 20px;
-    margin: 0;
+    margin: 0 0 10px 0;
 }
 
 .cta-box p {
@@ -203,12 +203,13 @@ padding: 40px;
 }
 
 .cta-button.button {
-    background-color: #3882F6;
+    background-color: #fa1228;
     color: #F9FAF8;
 }
 
 .cta-button.button:hover {
-    background-color: #fa1228;
+    background-color: #d80f23;
+    border: 2px solid #d80f23;
     transition: background-color .2s ease-in-out;
 }
 
